ValidatorParser.js
// Generated from Validator.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ValidatorListener = require('./ValidatorListener').ValidatorListener;
var ValidatorVisitor = require('./ValidatorVisitor').ValidatorVisitor;

var grammarFileName = "Validator.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'('", "')'", "','", "'AND'", "'CONTAINS'", "'DOES_NOT_CONTAIN'", 
                     "'DOES_NOT_MATCH'", "'IS_A_BOOLEAN'", "'IS_A_BOOLEAN_OR_INDETERMINATE'", 
                     "'IS_A_DATE'", "'IS_A_TIMESTAMP'", "'IS_A_LIST'", "'IS_A_NUMBER'", 
                     "'IS_A_STRING'", "'IS_A_TIME'", "'IS_A_URL'", "'IS_AFTER'", 
                     "'IS_AN_EMAIL_ADDRESS'", "'IS_AN_INTEGER'", "'IS_BEFORE'", 
                     "'IS_EQUAL_TO'", "'IS_GREATER_THAN'", "'IS_GREATER_THAN_OR_EQUAL_TO'", 
                     "'IS_LESS_THAN'", "'IS_LESS_THAN_OR_EQUAL_TO'", "'IS_NOT_EQUAL_TO'", 
                     "'IS_NOT_NULL'", "'IS_NOT_ON'", "'IS_NOT_ONE_OF'", 
                     "'IS_NULL'", "'IS_ON'", "'IS_ON_OR_AFTER'", "'IS_ON_OR_BEFORE'", 
                     "'IS_ONE_OF'", "'MATCHES'", "'NOT'", "'OR'", "'[]'" ];

var symbolicNames = [ null, null, null, null, "AND", "CONTAINS", "DOES_NOT_CONTAIN", 
                      "DOES_NOT_MATCH", "IS_A_BOOLEAN", "IS_A_BOOLEAN_OR_INDETERMINATE", 
                      "IS_A_DATE", "IS_A_TIMESTAMP", "IS_A_LIST", "IS_A_NUMBER", 
                      "IS_A_STRING", "IS_A_TIME", "IS_A_URL", "IS_AFTER", 
                      "IS_AN_EMAIL_ADDRESS", "IS_AN_INTEGER", "IS_BEFORE", 
                      "IS_EQUAL_TO", "IS_GREATER_THAN", "IS_GREATER_THAN_OR_EQUAL_TO", 
                      "IS_LESS_THAN", "IS_LESS_THAN_OR_EQUAL_TO", "IS_NOT_EQUAL_TO", 
                      "IS_NOT_NULL", "IS_NOT_ON", "IS_NOT_ONE_OF", "IS_NULL", 
                      "IS_ON", "IS_ON_OR_AFTER", "IS_ON_OR_BEFORE", "IS_ONE_OF", 
                      "MATCHES", "NOT", "OR", "EMPTY", "NULL", "INT", "FLOAT", 
                      "TRUE", "FALSE", "TIMESTAMP", "DATE", "TIME", "YEAR", 
                      "MONTHDAY", "JAN", "FEB", "MAR", "APR", "MAY", "JUN", 
                      "JUL", "AUG", "SEP", "OCT", "NOV", "DEC", "HOUR", 
                      "MINUTE", "SECOND", "ID", "STRING", "CHAR", "REGEX", 
                      "LINE_COMMENT", "COMMENT", "NEWLINE", "WS" ];

var ruleNames =  [ "prog", "stat", "expr", "value", "number", "bool", "datetime", 
                   "valueList", "nonEmptyValueList" ];

function ValidatorParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ValidatorParser.prototype = Object.create(antlr4.Parser.prototype);
ValidatorParser.prototype.constructor = ValidatorParser;

Object.defineProperty(ValidatorParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ValidatorParser.EOF = antlr4.Token.EOF;
ValidatorParser.T__0 = 1;
ValidatorParser.T__1 = 2;
ValidatorParser.T__2 = 3;
ValidatorParser.AND = 4;
ValidatorParser.CONTAINS = 5;
ValidatorParser.DOES_NOT_CONTAIN = 6;
ValidatorParser.DOES_NOT_MATCH = 7;
ValidatorParser.IS_A_BOOLEAN = 8;
ValidatorParser.IS_A_BOOLEAN_OR_INDETERMINATE = 9;
ValidatorParser.IS_A_DATE = 10;
ValidatorParser.IS_A_TIMESTAMP = 11;
ValidatorParser.IS_A_LIST = 12;
ValidatorParser.IS_A_NUMBER = 13;
ValidatorParser.IS_A_STRING = 14;
ValidatorParser.IS_A_TIME = 15;
ValidatorParser.IS_A_URL = 16;
ValidatorParser.IS_AFTER = 17;
ValidatorParser.IS_AN_EMAIL_ADDRESS = 18;
ValidatorParser.IS_AN_INTEGER = 19;
ValidatorParser.IS_BEFORE = 20;
ValidatorParser.IS_EQUAL_TO = 21;
ValidatorParser.IS_GREATER_THAN = 22;
ValidatorParser.IS_GREATER_THAN_OR_EQUAL_TO = 23;
ValidatorParser.IS_LESS_THAN = 24;
ValidatorParser.IS_LESS_THAN_OR_EQUAL_TO = 25;
ValidatorParser.IS_NOT_EQUAL_TO = 26;
ValidatorParser.IS_NOT_NULL = 27;
ValidatorParser.IS_NOT_ON = 28;
ValidatorParser.IS_NOT_ONE_OF = 29;
ValidatorParser.IS_NULL = 30;
ValidatorParser.IS_ON = 31;
ValidatorParser.IS_ON_OR_AFTER = 32;
ValidatorParser.IS_ON_OR_BEFORE = 33;
ValidatorParser.IS_ONE_OF = 34;
ValidatorParser.MATCHES = 35;
ValidatorParser.NOT = 36;
ValidatorParser.OR = 37;
ValidatorParser.EMPTY = 38;
ValidatorParser.NULL = 39;
ValidatorParser.INT = 40;
ValidatorParser.FLOAT = 41;
ValidatorParser.TRUE = 42;
ValidatorParser.FALSE = 43;
ValidatorParser.TIMESTAMP = 44;
ValidatorParser.DATE = 45;
ValidatorParser.TIME = 46;
ValidatorParser.YEAR = 47;
ValidatorParser.MONTHDAY = 48;
ValidatorParser.JAN = 49;
ValidatorParser.FEB = 50;
ValidatorParser.MAR = 51;
ValidatorParser.APR = 52;
ValidatorParser.MAY = 53;
ValidatorParser.JUN = 54;
ValidatorParser.JUL = 55;
ValidatorParser.AUG = 56;
ValidatorParser.SEP = 57;
ValidatorParser.OCT = 58;
ValidatorParser.NOV = 59;
ValidatorParser.DEC = 60;
ValidatorParser.HOUR = 61;
ValidatorParser.MINUTE = 62;
ValidatorParser.SECOND = 63;
ValidatorParser.ID = 64;
ValidatorParser.STRING = 65;
ValidatorParser.CHAR = 66;
ValidatorParser.REGEX = 67;
ValidatorParser.LINE_COMMENT = 68;
ValidatorParser.COMMENT = 69;
ValidatorParser.NEWLINE = 70;
ValidatorParser.WS = 71;

ValidatorParser.RULE_prog = 0;
ValidatorParser.RULE_stat = 1;
ValidatorParser.RULE_expr = 2;
ValidatorParser.RULE_value = 3;
ValidatorParser.RULE_number = 4;
ValidatorParser.RULE_bool = 5;
ValidatorParser.RULE_datetime = 6;
ValidatorParser.RULE_valueList = 7;
ValidatorParser.RULE_nonEmptyValueList = 8;


function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ValidatorParser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.stat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatContext);
    } else {
        return this.getTypedRuleContext(StatContext,i);
    }
};

ProgContext.prototype.enterRule = function(listener) {
    if(listener instanceof ValidatorListener ) {
        listener.enterProg(this);
	}
};

ProgContext.prototype.exitRule = function(listener) {
    if(listener instanceof ValidatorListener ) {
        listener.exitProg(this);
	}
};

ProgContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ValidatorVisitor ) {
        return visitor.visitProg(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ValidatorParser.ProgContext = ProgContext;

ValidatorParser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ValidatorParser.RULE_prog);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 19; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 18;
            this.stat();
            this.state = 21; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===ValidatorParser.T__0 || _la===ValidatorParser.ID || _la===ValidatorParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ValidatorParser.RULE_stat;
    return this;
}

StatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatContext.prototype.constructor = StatContext;

StatContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

StatContext.prototype.NEWLINE = function() {
    return this.getToken(ValidatorParser.NEWLINE, 0);
};

StatContext.prototype.enterRule = function(listener) {
    if(listener instanceof ValidatorListener ) {
        listener.enterStat(this);
	}
};

StatContext.prototype.exitRule = function(listener) {
    if(listener instanceof ValidatorListener ) {
        listener.exitStat(this);
	}
};

StatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ValidatorVisitor ) {
        return visitor.visitStat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ValidatorParser.StatContext = StatContext;

ValidatorParser.prototype.stat = function() {

    var localctx = new StatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ValidatorParser.RULE_stat);
    try {
        this.state = 27;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ValidatorParser.T__0:
        case ValidatorParser.ID:
            this.enterOuterAlt(localctx, 1);
            this.state = 23;
            this.expr(0);
            this.state = 24;
            this.match(ValidatorParser.NEWLINE);
            break;
        case ValidatorParser.NEWLINE:
            this.enterOuterAlt(localctx, 2);
            this.state = 26;
            this.match(ValidatorParser.NEWLINE);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ValidatorParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.ID = function() {
    return this.getToken(ValidatorParser.ID, 0);
};

ExprContext.prototype.MATCHES = function() {
    return this.getToken(ValidatorParser.MATCHES, 0);
};

ExprContext.prototype.REGEX = function() {
    return this.getToken(ValidatorParser.REGEX, 0);
};

ExprContext.prototype.DOES_NOT_MATCH = function() {
    return this.getToken(ValidatorParser.DOES_NOT_MATCH, 0);
};

ExprContext.prototype.CONTAINS = function() {
    return this.getToken(ValidatorParser.CONTAINS, 0);
};

ExprContext.prototype.STRING = function() {
    return this.getToken(ValidatorParser.STRING, 0);
};

ExprContext.prototype.DOES_NOT_CONTAIN = function() {
    return this.getToken(ValidatorParser.DOES_NOT_CONTAIN, 0);
};

ExprContext.prototype.IS_NULL = function() {
    return this.getToken(ValidatorParser.IS_NULL, 0);
};

ExprContext.prototype.IS_NOT_NULL = function() {
    return this.getToken(ValidatorParser.IS_NOT_NULL, 0);
};

ExprContext.prototype.IS_A_BOOLEAN = function() {
    return this.getToken(ValidatorParser.IS_A_BOOLEAN, 0);
};

ExprContext.prototype.IS_A_BOOLEAN_OR_INDETERMINATE = function() {
    return this.getToken(ValidatorParser.IS_A_BOOLEAN_OR_INDETERMINATE, 0);
};

ExprContext.prototype.IS_A_DATE = function() {
    return this.getToken(ValidatorParser.IS_A_DATE, 0);
};

ExprContext.prototype.IS_A_TIMESTAMP = function() {
    return this.getToken(ValidatorParser.IS_A_TIMESTAMP, 0);
};

ExprContext.prototype.IS_A_TIME = function() {
    return this.getToken(ValidatorParser.IS_A_TIME, 0);
};

ExprContext.prototype.IS_A_LIST = function() {
    return this.getToken(ValidatorParser.IS_A_LIST, 0);
};

ExprContext.prototype.IS_A_NUMBER = function() {
    return this.getToken(ValidatorParser.IS_A_NUMBER, 0);
};

ExprContext.prototype.IS_A_STRING = function() {
    return this.getToken(ValidatorParser.IS_A_STRING, 0);
};

ExprContext.prototype.IS_A_URL = function() {
    return this.getToken(ValidatorParser.IS_A_URL, 0);
};

ExprContext.prototype.IS_AN_EMAIL_ADDRESS = function() {
    return this.getToken(ValidatorParser.IS_AN_EMAIL_ADDRESS, 0);
};

ExprContext.prototype.IS_AN_INTEGER = function() {
    return this.getToken(ValidatorParser.IS_AN_INTEGER, 0);
};

ExprContext.prototype.IS_AFTER = function() {
    return this.getToken(ValidatorParser.IS_AFTER, 0);
};

ExprContext.prototype.datetime = function() {
    return this.getTypedRuleContext(DatetimeContext,0);
};

ExprContext.prototype.IS_BEFORE = function() {
    return this.getToken(ValidatorParser.IS_BEFORE, 0);
};

ExprContext.prototype.IS_EQUAL_TO = function() {
    return this.getToken(ValidatorParser.IS_EQUAL_TO, 0);
};

ExprContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};

ExprContext.prototype.IS_NOT_EQUAL_TO = function() {
    return this.getToken(ValidatorParser.IS_NOT_EQUAL_TO, 0);
};

ExprContext.prototype.IS_GREATER_THAN = function() {
    return this.getToken(ValidatorParser.IS_GREATER_THAN, 0);
};

ExprContext.prototype.number = function() {
    return this.getTypedRuleContext(NumberContext,0);
};

ExprContext.prototype.IS_GREATER_THAN_OR_EQUAL_TO = function() {
    return this.getToken(ValidatorParser.IS_GREATER_THAN_OR_EQUAL_TO, 0);
};

ExprContext.prototype.IS_LESS_THAN = function() {
    return this.getToken(ValidatorParser.IS_LESS_THAN, 0);
};

ExprContext.prototype.IS_LESS_THAN_OR_EQUAL_TO = function() {
    return this.getToken(ValidatorParser.IS_LESS_THAN_OR_EQUAL_TO, 0);
};

ExprContext.prototype.IS_ON_OR_AFTER = function() {
    return this.getToken(ValidatorParser.IS_ON_OR_AFTER, 0);
};

ExprContext.prototype.IS_ON_OR_BEFORE = function() {
    return this.getToken(ValidatorParser.IS_ON_OR_BEFORE, 0);
};

ExprContext.prototype.IS_ON = function() {
    return this.getToken(ValidatorParser.IS_ON, 0);
};

ExprContext.prototype.IS_NOT_ON = function() {
    return this.getToken(ValidatorParser.IS_NOT_ON, 0);
};

ExprContext.prototype.IS_ONE_OF = function() {
    return this.getToken(ValidatorParser.IS_ONE_OF, 0);
};

ExprContext.prototype.valueList = function() {
    return this.getTypedRuleContext(ValueListContext,0);
};

ExprContext.prototype.IS_NOT_ONE_OF = function() {
    return this.getToken(ValidatorParser.IS_NOT_ONE_OF, 0);
};

ExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

ExprContext.prototype.AND = function() {
    return this.getToken(ValidatorParser.AND, 0);
};

ExprContext.prototype.OR = function() {
    return this.getToken(ValidatorParser.OR, 0);
};

ExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof ValidatorListener ) {
        listener.enterExpr(this);
	}
};

ExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof ValidatorListener ) {
        listener.exitExpr(this);
	}
};

ExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ValidatorVisitor ) {
        return visitor.visitExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};



ValidatorParser.prototype.expr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ExprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, ValidatorParser.RULE_expr, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.state = 30;
            this.match(ValidatorParser.ID);
            this.state = 31;
            this.match(ValidatorParser.MATCHES);
            this.state = 32;
            this.match(ValidatorParser.REGEX);
            break;

        case 2:
            this.state = 33;
            this.match(ValidatorParser.ID);
            this.state = 34;
            this.match(ValidatorParser.DOES_NOT_MATCH);
            this.state = 35;
            this.match(ValidatorParser.REGEX);
            break;

        case 3:
            this.state = 36;
            this.match(ValidatorParser.ID);
            this.state = 37;
            this.match(ValidatorParser.CONTAINS);
            this.state = 38;
            this.match(ValidatorParser.STRING);
            break;

        case 4:
            this.state = 39;
            this.match(ValidatorParser.ID);
            this.state = 40;
            this.match(ValidatorParser.DOES_NOT_CONTAIN);
            this.state = 41;
            this.match(ValidatorParser.STRING);
            break;

        case 5:
            this.state = 42;
            this.match(ValidatorParser.ID);
            this.state = 43;
            this.match(ValidatorParser.IS_NULL);
            break;

        case 6:
            this.state = 44;
            this.match(ValidatorParser.ID);
            this.state = 45;
            this.match(ValidatorParser.IS_NOT_NULL);
            break;

        case 7:
            this.state = 46;
            this.match(ValidatorParser.ID);
            this.state = 47;
            this.match(ValidatorParser.IS_A_BOOLEAN);
            break;

        case 8:
            this.state = 48;
            this.match(ValidatorParser.ID);
            this.state = 49;
            this.match(ValidatorParser.IS_A_BOOLEAN_OR_INDETERMINATE);
            break;

        case 9:
            this.state = 50;
            this.match(ValidatorParser.ID);
            this.state = 51;
            this.match(ValidatorParser.IS_A_DATE);
            break;

        case 10:
            this.state = 52;
            this.match(ValidatorParser.ID);
            this.state = 53;
            this.match(ValidatorParser.IS_A_TIMESTAMP);
            break;

        case 11:
            this.state = 54;
            this.match(ValidatorParser.ID);
            this.state = 55;
            this.match(ValidatorParser.IS_A_TIME);
            break;

        case 12:
            this.state = 56;
            this.match(ValidatorParser.ID);
            this.state = 57;
            this.match(ValidatorParser.IS_A_LIST);
            break;

        case 13:
            this.state = 58;
            this.match(ValidatorParser.ID);
            this.state = 59;
            this.match(ValidatorParser.IS_A_NUMBER);
            break;

        case 14:
            this.state = 60;
            this.match(ValidatorParser.ID);
            this.state = 61;
            this.match(ValidatorParser.IS_A_STRING);
            break;

        case 15:
            this.state = 62;
            this.match(ValidatorParser.ID);
            this.state = 63;
            this.match(ValidatorParser.IS_A_URL);
            break;

        case 16:
            this.state = 64;
            this.match(ValidatorParser.ID);
            this.state = 65;
            this.match(ValidatorParser.IS_AN_EMAIL_ADDRESS);
            break;

        case 17:
            this.state = 66;
            this.match(ValidatorParser.ID);
            this.state = 67;
            this.match(ValidatorParser.IS_AN_INTEGER);
            break;

        case 18:
            this.state = 68;
            this.match(ValidatorParser.ID);
            this.state = 69;
            this.match(ValidatorParser.IS_AFTER);
            this.state = 70;
            this.datetime();
            break;

        case 19:
            this.state = 71;
            this.match(ValidatorParser.ID);
            this.state = 72;
            this.match(ValidatorParser.IS_BEFORE);
            this.state = 73;
            this.datetime();
            break;

        case 20:
            this.state = 74;
            this.match(ValidatorParser.ID);
            this.state = 75;
            this.match(ValidatorParser.IS_EQUAL_TO);
            this.state = 76;
            this.value();
            break;

        case 21:
            this.state = 77;
            this.match(ValidatorParser.ID);
            this.state = 78;
            this.match(ValidatorParser.IS_NOT_EQUAL_TO);
            this.state = 79;
            this.value();
            break;

        case 22:
            this.state = 80;
            this.match(ValidatorParser.ID);
            this.state = 81;
            this.match(ValidatorParser.IS_GREATER_THAN);
            this.state = 82;
            this.number();
            break;

        case 23:
            this.state = 83;
            this.match(ValidatorParser.ID);
            this.state = 84;
            this.match(ValidatorParser.IS_GREATER_THAN_OR_EQUAL_TO);
            this.state = 85;
            this.number();
            break;

        case 24:
            this.state = 86;
            this.match(ValidatorParser.ID);
            this.state = 87;
            this.match(ValidatorParser.IS_LESS_THAN);
            this.state = 88;
            this.number();
            break;

        case 25:
            this.state = 89;
            this.match(ValidatorParser.ID);
            this.state = 90;
            this.match(ValidatorParser.IS_LESS_THAN_OR_EQUAL_TO);
            this.state = 91;
            this.number();
            break;

        case 26:
            this.state = 92;
            this.match(ValidatorParser.ID);
            this.state = 93;
            this.match(ValidatorParser.IS_ON_OR_AFTER);
            this.state = 94;
            this.datetime();
            break;

        case 27:
            this.state = 95;
            this.match(ValidatorParser.ID);
            this.state = 96;
            this.match(ValidatorParser.IS_ON_OR_BEFORE);
            this.state = 97;
            this.datetime();
            break;

        case 28:
            this.state = 98;
            this.match(ValidatorParser.ID);
            this.state = 99;
            this.match(ValidatorParser.IS_ON);
            this.state = 100;
            this.datetime();
            break;

        case 29:
            this.state = 101;
            this.match(ValidatorParser.ID);
            this.state = 102;
            this.match(ValidatorParser.IS_NOT_ON);
            this.state = 103;
            this.datetime();
            break;

        case 30:
            this.state = 104;
            this.match(ValidatorParser.ID);
            this.state = 105;
            this.match(ValidatorParser.IS_ONE_OF);
            this.state = 106;
            this.valueList();
            break;

        case 31:
            this.state = 107;
            this.match(ValidatorParser.ID);
            this.state = 108;
            this.match(ValidatorParser.IS_NOT_ONE_OF);
            this.state = 109;
            this.valueList();
            break;

        case 32:
            this.state = 110;
            this.match(ValidatorParser.T__0);
            this.state = 111;
            this.expr(0);
            this.state = 112;
            this.match(ValidatorParser.T__1);
            break;

        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 124;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 122;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new ExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, ValidatorParser.RULE_expr);
                    this.state = 116;
                    if (!( this.precpred(this._ctx, 34))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 34)");
                    }
                    this.state = 117;
                    this.match(ValidatorParser.AND);
                    this.state = 118;
                    this.expr(35);
                    break;

                case 2:
                    localctx = new ExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, ValidatorParser.RULE_expr);
                    this.state = 119;
                    if (!( this.precpred(this._ctx, 33))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 33)");
                    }
                    this.state = 120;
                    this.match(ValidatorParser.OR);
                    this.state = 121;
                    this.expr(34);
                    break;

                } 
            }
            this.state = 126;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};


function ValueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ValidatorParser.RULE_value;
    return this;
}
